Two minor css fixes to prevent public profile at home wrong see (will have a redesign, but almost for now there is no more text overlaping).

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -512,9 +512,9 @@ h2.job-titles { font-size: 14px; font-style: italic; font-weight: normal; color:
 .home form fieldset #serviceDate { width: 80px; }
 
 .home #secondary { position: relative; margin: 0 25px 0 600px; text-align: left; }
-.home #secondary h2 { z-index: 2; position: absolute; top: -28px; right: 25px; margin: 0; padding: 2px 15px; width: 114px; font-size: 14px; font-weight: normal; /*color: #461864; background: url('../img/feat-provider-tab.gif') no-repeat top left;*/ border: 3px solid #46aeba; background: #FFF; border-bottom: none; }
+.home #secondary h2 { z-index: 2; position: absolute; top: -28px; right: 25px; margin: 0; padding: 2px 15px; /*width: 114px;*/ font-size: 14px; font-weight: normal; /*color: #461864; background: url('../img/feat-provider-tab.gif') no-repeat top left;*/ border: 3px solid #46aeba; background: #FFF; border-bottom: none; }
 .home #secondary .spotlight { z-index: 1; position: relative; padding: 20px; border: 3px solid #46aeba; background: #FFF; }
-.home #secondary .spotlight .rating { position: absolute; top: 25px; right: 20px; width: 68px; height: 16px; line-height: 0; font-size: 0; background: url('../img/star-off.png') repeat-x top left; }
+.home #secondary .spotlight .rating { /*position: absolute;*/ top: 25px; right: 20px; width: 68px; height: 16px; line-height: 0; font-size: 0; background: url('../img/star-off.png') repeat-x top left; }
 .home #secondary .spotlight .id { float: left; }
 .home #secondary .spotlight .id img { width: 113px; }
 .home #secondary .spotlight .lang { margin-left: 124px; min-height: 113px; }
